--- a/style.css
+++ b/style.css
@@ -25,3 +25,10 @@
     text-align: center;
     background-color: rgb(171, 183, 184);
 }
+.EIP {
+    color: rgb(255, 255, 255);
+    background-color: black;
+    border-radius: 10px;
+    text-align: center;
+    padding: 5px;
+}
