--- a/Games/PVT/frontend/style.css
+++ b/Games/PVT/frontend/style.css
@@ -1,26 +1,20 @@
 body, html {
-    height: 100%;
-    margin: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     font-family: Arial, sans-serif;
   }
   
   h2 {
     text-align:center;
-    margin-bottom: 20px;;
   }
 
   #test-area {
     background-color: black;
     color: white;
-    border-radius: 10px;
     height: 300px;
     display: flex;
+    flex-direction: column;
     justify-content: center;
-    align-items: center;
-    font-size: 2em;
+    border-radius: 10px;
+    font-size: 2.5em;
   }
   
   button {
