--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     border-bottom: 1px dotted;
 }
 
-#body {
+.pbody {
     margin: 25px;
 }
 
@@ -79,3 +79,17 @@
     border-top-left-radius: 5px; /* Match card's rounded corners */
     border-top-right-radius: 5px; /* Match card's rounded corners */
 }
+
+#particles-js {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    z-index: -1; /* Behind other content */
+  }
+  .hero-section {
+    position: relative; /* To position particles correctly */
+    overflow: hidden; /* Hide overflow for smooth edges */
+  }
+  
