--- a/style.css
+++ b/style.css
@@ -3,8 +3,9 @@
     border-bottom: 1px dotted;
 }
 
-.pbody {
+#body {
     margin: 25px;
+    overflow-x: hidden;
 }
 
 /* Resume Header */
@@ -79,17 +80,4 @@
     border-top-left-radius: 5px; /* Match card's rounded corners */
     border-top-right-radius: 5px; /* Match card's rounded corners */
 }
-
-#particles-js {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    z-index: -1; /* Behind other content */
-  }
-  .hero-section {
-    position: relative; /* To position particles correctly */
-    overflow: hidden; /* Hide overflow for smooth edges */
-  }
   
