--- a/style.css
+++ b/style.css
@@ -4,13 +4,22 @@
 }
 
 #body {
-    overflow-x: hidden;
+    overflow: hidden; /* This will prevent any overflow, vertically or horizontally */
+    padding: 0 15px; /* Add some padding to prevent text from touching the edges */
+    max-width: 100%; /* Ensure content width does not exceed the parent width */
+    margin: 0 auto; /* Center the content within the section */
+    box-sizing: border-box; /* Include padding and border in the element's total width and height */
+}
+#resume {
+    overflow: hidden; /* This will prevent any overflow, vertically or horizontally */
+    padding: 0 15px; /* Add some padding to prevent text from touching the edges */
+    max-width: 100%; /* Ensure content width does not exceed the parent width */
+    margin: 0 auto; /* Center the content within the section */
+    box-sizing: border-box; /* Include padding and border in the element's total width and height */
 }
 
 .hero {
-    z-index: 10;
-    overflow-x: hidden;
-}
+    z-index: 10;}
 /* Resume Header */
 .resumehead {
     border: 1px solid;
@@ -25,15 +34,6 @@
 /* Carousel Caption Background */
 .carousel-caption {
     background-color: rgba(51, 50, 50, 0.5);
-}
-
-/* Resume Area Margin */
-.resumearea {
-    margin: 20px;
-}
-
-.resumearea1 {
-    margin: 20px;
 }
 /* Announcement Styling */
 .p-announcement {
